--- a/OOPS/index.html
+++ b/OOPS/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="factoryFunctions.js"></script>
+    <script src="inheritance.js"></script>
 </body>
 </html>
